Fix for folder size on mobile re issue #27537
Fix for the UI size issue described in
[4.0] [backend-template] Media Manager unusable on mobile #27537

--- a/administrator/components/com_media/resources/styles/components/_media-browser.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-browser.scss
@@ -42,7 +42,7 @@
 
 .media-browser-item-preview {
   position: relative;
-  font-size: 60px;
+  font-size: 10vw;
   color: #007eb7;
   border-radius: $grid-item-border-radius;
   &::after {
